test/1.2/errors/T_EEXTERN.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// ERROR EEXTERN
method extern m1(x) {}

method extern m2(int x) default {}
/// ERROR EEXTERN
method m2(x) {}
